product_docs/docs/pem/7.16/pem_admin/07_managing_pem_agent.mdx
---
title: "Managing a PEM Agent"
---

<div id="managing_pem_agent" class="registered_link"></div>


The sections that follow provide information about the behavior and management of a PEM agent.

## Agent Privileges



By default, the PEM agent is installed with `root` privileges for the operating system host and superuser privileges for the database server. These privileges allow the PEM agent to invoke unrestricted probes on the monitored host and database server about system usage, retrieving and returning the information to the PEM server.

Please note that PEM functionality diminishes as the privileges of the PEM agent decrease. For complete functionality, the PEM agent should run as `root`. If the PEM agent is run under the database server's service account, PEM probes will not have complete access to the statistical information used to generate reports, and functionality will be limited to the capabilities of that account. If the PEM agent is run under another lesser-privileged account, functionality will be limited even further.

If you limit the operating system privileges of the PEM agent, some of the PEM probes will not return information, and the following functionality may be affected:

<table><tbody><tr class="odd"><td>Probe or Action</td><td>Operating System</td><td><blockquote><p>PEM Functionality Affected</p></blockquote></td></tr><tr class="even"><td>Data And Logfile Analysis</td><td>Linux/ Windows</td><td><blockquote><p>The Postgres Expert will be unable to access complete information.</p></blockquote></td></tr><tr class="odd"><td>Session Information</td><td>Linux</td><td><blockquote><p>The per-process statistics will be incomplete.</p></blockquote></td></tr><tr class="even"><td>PG HBA</td><td>Linux/ Windows</td><td><blockquote><p>The Postgres Expert will be unable to access complete information.</p></blockquote></td></tr><tr class="odd"><td>Service restart functionality</td><td>Linux/ Windows</td><td><blockquote><p>The Audit Log Manager, Server Log Manager Log Analysis Expert and PEM may be unable to apply requested modifications.</p></blockquote></td></tr><tr class="even"><td>Package Deployment</td><td>Linux/ Windows</td><td><blockquote><p>PEM will be unable to run downloaded installation modules.</p></blockquote></td></tr><tr class="odd"><td>Batch Task</td><td>Windows</td><td><blockquote><p>PEM will be unable to run scheduled batch jobs in Windows.</p></blockquote></td></tr><tr class="even"><td>Collect data from server (root access required)</td><td>Linux/ Windows</td><td><blockquote><p>Columns such as swap usage, CPU usage, IO read, IO write will be displayed as 0 in the session activity dashboard.</p></blockquote></td></tr></tbody></table>

<div class="note">

<div class="title">

Note

</div>

The above-mentioned list is not comprehensive, but should provide an overview of the type of functionality that will be limited.

</div>

If you restrict the database privileges of the PEM agent, the following PEM functionality may be affected:

|                            |                  |                                                                                       |
|----------------------------|------------------|---------------------------------------------------------------------------------------|
| Probe                      | Operating System | PEM Functionality Affected                                                            |
| Audit Log Collection       | Linux/Windows    | PEM will receive empty data from the PEM database.                                    |
| Server Log Collection      | Linux/Windows    | PEM will be unable to collect server log information.                                 |
| Database Statistics        | Linux/Windows    | The Database/Server Analysis dashboards will contain incomplete information.          |
| Session Waits/System Waits | Linux/Windows    | The Session/System Waits dashboards will contain incomplete information.              |
| Locks Information          | Linux/Windows    | The Database/Server Analysis dashboards will contain incomplete information.          |
| Streaming Replication      | Linux/Windows    | The Streaming Replication dashboard will not display information.                     |
| Slony Replication          | Linux/Windows    | Slony-related charts on the Database Analysis dashboard will not display information. |
| Tablespace Size            | Linux/Windows    | The Server Analysis dashboard will not display complete information.                  |
| xDB Replication            | Linux/Windows    | PEM will be unable to send xDB alerts and traps.                                      |

If the probe is querying the operating system with insufficient privileges, the probe may return a `permission denied` error.

If the probe is querying the database with insufficient privileges, the probe may return a `permission denied` error or display the returned data in a PEM chart or graph as an empty value.

When a probe fails, an entry will be written to the log file that contains the name of the probe, the reason the probe failed, and a hint that will help you resolve the problem.

You can view probe-related errors that occurred on the server in the `Probe Log` dashboard, or review error messages in the PEM worker log files. On Linux, the default location of the log file is:

> `/var/log/pem/worker.log`

On Windows, log information is available on the `Event Viewer`.

## Agent Configuration



A number of user-configurable parameters and registry entries control the behavior of the PEM agent. You may be required to modify the PEM agent's parameter settings to enable some PEM functionality. After modifying values in the PEM agent configuration file, you must restart the PEM agent to apply any changes.

With the exception of the `PEM_MAXCONN` parameter, we strongly recommend against modifying any of the configuration parameters or registry entries listed below without first consulting EDB support experts *unless* the modifications are required to enable PEM functionality.

On Linux systems, PEM configuration options are stored in the `agent.cfg` file, located in `/usr/edb/pem/agent/etc`. The `agent.cfg` file contains the following entries:

| Parameter Name            | Description                                                                                                                                                                                                                                                                                               | Default Value                                                                                                 |
|---------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------|
| pem\_host                 | The IP address or hostname of the PEM server.                                                                                                                                                                                                                                                             | 127.0.0.1.                                                                                                    |
| pem\_port                 | The database server port to which the agent connects to communicate with the PEM server.                                                                                                                                                                                                                  | Port 5432.                                                                                                    |
| pem\_agent                | A unique identifier assigned to the PEM agent.                                                                                                                                                                                                                                                            | The first agent is '1', the second agent is '2', and so on.                                                   |
| agent\_ssl\_key           | The complete path to the PEM agent's key file.                                                                                                                                                                                                                                                            | /root/.pem/agent.key                                                                                          |
| agent\_ssl\_crt           | The complete path to the PEM agent's certificate file.                                                                                                                                                                                                                                                    | /root/.pem/agent.crt                                                                                          |
| agent\_flag\_dir          | Used for HA support. Specifies the directory path checked for requests to take over monitoring another server. Requests are made in the form of a file in the specified flag directory.                                                                                                                   | Not set by default.                                                                                           |
| log\_level                | Log level specifies the type of event that will be written to the PEM log files.                                                                                                                                                                                                                          | warning                                                                                                       |
| log\_location             | Specifies the location of the PEM worker log file.                                                                                                                                                                                                                                                        | 127.0.0.1.                                                                                                    |
| agent\_log\_location      | Specifies the location of the PEM agent log file.                                                                                                                                                                                                                                                         | /var/log/pem/agent.log                                                                                        |
| long\_wait                | The maximum length of time (in seconds) that the PEM agent will wait before attempting to connect to the PEM server if an initial connection attempt fails.                                                                                                                                               | 30 seconds                                                                                                    |
| short\_wait               | The minimum length of time (in seconds) that the PEM agent will wait before checking which probes are next in the queue (waiting to run).                                                                                                                                                                 | 10 seconds                                                                                                    |
| alert\_threads            | The number of alert threads to be spawned by the agent.                                                                                                                                                                                                                                                   | Set to 1 for the agent that resides on the host of the PEM server; 0 for all other agents.                    |
| enable\_smtp              | When set to true for multiple PEM Agents (7.13 or lesser) and PEM backend database (9.4 or lesser) then it may send more duplicate emails. Whereas for PEM Agents (7.14 or higher) and PEM backend database (9.5 or higher) then it may send lesser duplicate emails.                                     | true for PEM server host; false for all others.                                                               |
| enable\_snmp              | When set to true for multiple PEM Agents (7.13 or lesser) and PEM backend database (9.4 or lesser) then it may send more duplicate traps. Whereas for PEM Agents (7.14 or higher) and PEM backend database (9.5 or higher) then it may send lesser duplicate traps.                                       | true for PEM server host; false for all others.                                                               |
| enable\_nagios            | When set to true, Nagios alerting is enabled.                                                                                                                                                                                                                                                             | true for PEM server host; false for all others.                                                               |
| connect\_timeout          | The max time in seconds (a decimal integer string) that the agent will wait for a connection.                                                                                                                                                                                                             | Not set by default; set to 0 to indicate the agent should wait indefinitely.                                  |
| allow\_server\_restart    | If set to TRUE, the agent can restart the database server that it monitors. Some PEM features may be enabled/disabled, depending on the value of this parameter.                                                                                                                                          | False                                                                                                         |
| max\_connections          | The maximum number of probe connections used by the connection throttler.                                                                                                                                                                                                                                 | 0 (an unlimited number)                                                                                       |
| connection\_lifetime      | Use ConnectionLifetime (or connection\_lifetime) to specify the minimum number of seconds an open but idle connection is retained. This parameter is ignored if the value specified in MaxConnections is reached and a new connection (to a different database) is required to satisfy a waiting request. | By default, set to 0 (a connection is dropped when the connection is idle after the agent's processing loop). |
| allow\_batch\_probes      | If set to TRUE, the user will be able to create batch probes using the custom probes feature.                                                                                                                                                                                                             | false                                                                                                         |
| heartbeat\_connection     | When set to TRUE, a dedicated connection is used for sending the heartbeats.                                                                                                                                                                                                                              | false                                                                                                         |
| batch\_script\_dir        | Provide the path where script file (for alerting) will be stored.                                                                                                                                                                                                                                         | /tmp                                                                                                          |
| connection\_custom\_setup | Use to provide SQL code that will be invoked when a new connection with a monitored server is made.                                                                                                                                                                                                       | Not set by default.                                                                                           |
| ca\_file                  | Provide the path where the CA certificate resides.                                                                                                                                                                                                                                                        | Not set by default.                                                                                           |
| batch\_script\_user       | Provide the name of the user that should be used for executing the batch/shell scripts.                                                                                                                                                                                                                   | None                                                                                                          |

On 64 bit Windows systems, PEM registry entries are located in:

> `HKEY_LOCAL_MACHINE\Software\Wow6432Node\EnterpriseDB\PEM\agent`

The registry contains the following entries:

<table style="width:4%;"><colgroup><col style="width: 1%" /><col style="width: 1%" /><col style="width: 1%" /></colgroup><tbody><tr class="odd"><td><blockquote><p>Parameter Name</p></blockquote></td><td>Description</td><td>Default Value</td></tr><tr class="even"><td>PEM_HOST</td><td>The IP address or hostname of the PEM server.</td><td>127.0.0.1.</td></tr><tr class="odd"><td>PEM_PORT</td><td>The database server port to which the agent connects to communicate with the PEM server.</td><td>Port 5432.</td></tr><tr class="even"><td>AgentID</td><td>A unique identifier assigned to the PEM agent.</td><td>The first agent is '1', the second agent is '2', and so on.</td></tr><tr class="odd"><td>AgentKeyPath</td><td>The complete path to the PEM agent's key file.</td><td>%APPDATA%\Roaming\pem\ agent.key.</td></tr><tr class="even"><td>AgentCrtPath</td><td>The complete path to the PEM agent's certificate file.</td><td>%APPDATA%\Roaming\pem\ agent.crt</td></tr><tr class="odd"><td>AgentFlagDir</td><td>Used for HA support. Specifies the directory path checked for requests to take over monitoring another server. Requests are made in the form of a file in the specified flag directory.</td><td>Not set by default.</td></tr><tr class="even"><td>LogLevel</td><td>Log level specifies the type of event that will be written to the PEM log files.</td><td>warning</td></tr><tr class="odd"><td>LongWait</td><td>The maximum length of time (in seconds) that the PEM agent will wait before attempting to connect to the PEM server if an initial connection attempt fails.</td><td>30 seconds</td></tr><tr class="even"><td>shortWait</td><td>The minimum length of time (in seconds) that the PEM agent will wait before checking which probes are next in the queue (waiting to run).</td><td>10 seconds</td></tr><tr class="odd"><td>AlertThreads</td><td>The number of alert threads to be spawned by the agent.</td><td>Set to 1 for the agent that resides on the host of the PEM server; 0 for all other agents.</td></tr><tr class="even"><td>EnableSMTP</td><td>When set to true, the SMTP email feature is enabled.</td><td>true for PEM server host; false for all others.</td></tr><tr class="odd"><td>EnableSNMP</td><td>When set to true, the SNMP trap feature is enabled.</td><td>true for PEM server host; false for all others.</td></tr><tr class="even"><td>ConnectTimeout</td><td>The max time in seconds (a decimal integer string) that the agent will wait for a connection.</td><td>Not set by default; if set to 0, the agent will wait indefinitely.</td></tr><tr class="odd"><td>AllowServerRestart</td><td>If set to TRUE, the agent can restart the database server that it monitors. Some PEM features may be enabled/disabled, depending on the value of this parameter.</td><td>true</td></tr><tr class="even"><td>MaxConnections</td><td>The maximum number of probe connections used by the connection throttler.</td><td>0 (an unlimited number)</td></tr><tr class="odd"><td>ConnectionLifetime</td><td>Use ConnectionLifetime (or connection_lifetime) to specify the minimum number of seconds an open but idle connection is retained. This parameter is ignored if the value specified in MaxConnections is reached and a new connection (to a different database) is required to satisfy a waiting request.</td><td>By default, set to 0 (a connection is dropped when the connection is idle after the agent's processing loop).</td></tr><tr class="even"><td>AllowBatchProbes</td><td>If set to TRUE, the user will be able to create batch probes using the custom probes feature.</td><td>false</td></tr><tr class="odd"><td>HeartbeatConnection</td><td>When set to TRUE, a dedicated connection is used for sending the heartbeats.</td><td>false</td></tr><tr class="even"><td>BatchScriptDir</td><td>Provide the path where script file (for alerting) will be stored.</td><td>/tmp</td></tr><tr class="odd"><td>ConnectionCustomSetup</td><td>Use to provide SQL code that will be invoked when a new connection with a monitored server is made.</td><td>Not set by default.</td></tr><tr class="even"><td>ca_file</td><td>Provide the path where the CA certificate resides.</td><td>Not set by default.</td></tr><tr class="odd"><td>AllowBatchJobSteps</td><td>If set to true,the batch/shell scripts will be executed using Administrator user account.</td><td>None</td></tr></tbody></table>

## Agent Properties



The PEM Agent `Properties` dialog provides information about the PEM agent from which the dialog was opened; to open the dialog, right-click on an agent name in the PEM client tree control, and select `Properties` from the context menu.

![PEM Agent Properties dialog - General tab](../images/pem_agent_properties.png)

Use fields on the PEM Agent `Properties` dialog to review or modify information about the PEM agent:

-   The `Description` field displays a modifiable description of the PEM agent. This description is displayed in the tree control of the PEM client.

-   You can use groups to organize your servers and agents in the PEM client tree control. Use the `Group` drop-down listbox to select the group in which the agent will be displayed.

-   Use the `Team` field to specify the name of the group role that should be able to access servers monitored by the agent; the servers monitored by this agent will be displayed in the PEM client tree control to connected team members. Please note that this is a convenience feature. The Team field does not provide true isolation, and should not be used for security purposes.

-   The `Heartbeat interval` fields display the length of time that will elapse between reports from the PEM agent to the PEM server. Use the selectors next to the `Minutes` or `Seconds` fields to modify the interval.

    ![PEM Agent Properties dialog - Job Notifications tab](../images/pem_agent_job_notification_properties.png)

    Use the fields on the `Job Notifications` tab to configure the email notification settings on agent level:

    -   Use the `Override default configuration?` switch to specify if you want the agent level job notification settings to override the default job notification settings. If you select `Yes` for this switch, you can use the rest of the settings on this dialog to define when and to whom the job notifications should be sent. Please note that the rest of the settings on this dialog work only if you enable the `Override default configuration?` switch.
    -   Use the `Email on job completion?` switch to specify if the job notification should be sent on the successful job completion.
    -   Use the `Email on a job failure?` switch to specify if the job notification should be sent on the failure of a job.
    -   Use the `Email group` field to specify the email group to whom the job notification should be sent.

    ![PEM Agent Properties dialog - Agent Configurations tab](../images/pem_agent_configurations_properties.png)

    The `Agent Configurations` tab displays all the current configurations and capabilities of a agent.

    -   The `Parameter` column displays a list of parameters.
    -   The `Value` column displays the current value of the corresponding parameter.
    -   The `Category` column displays the category of the corresponding parameter; it can be either `configuration` or `capability`.
